connection to my own api